Adjust media queries for smaller devices, edit todo and cont right dimensions, fix bleeding box-shadow on menu btn, add padding to project btn, remove supports from cont right"

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,12 +18,6 @@
   box-sizing: border-box;
 }
 
-@supports not (scrollbar-gutter: stable) {
-  .container-right {
-    overflow-y: scroll;
-  }
-}
-
 * {
   font-family: inherit;
 }
@@ -178,7 +172,7 @@ nav,
 }
 
 .selected-menu-btn {
-  box-shadow: -4px 0px 0px 0px #F44336;
+  box-shadow: -4px 0px 0px -1px #F44336;
 }
 
 .my-projects-btn-li {
@@ -232,6 +226,7 @@ nav,
 .edit-projects-btn {
   cursor: pointer;
   color: #0b0b0bb0;
+  padding: 0.1rem .4rem;
 }
 
 .project-title {
@@ -340,17 +335,16 @@ nav,
   justify-content: center;
   align-content: flex-start;
   flex-wrap: wrap;
-  gap: 1rem;
+  gap: .5rem;
   margin: 7.5rem 0 2rem 0;
-  padding: 0 60px 4px;
+  padding: 0 40px 4px;
   overflow-y: auto;
   overflow-x: hidden;
-  scrollbar-gutter: stable;
 }
 
 .todo {
   width: 200px;
-  min-width: 15.8rem;
+  min-width: 17.8rem;
   border-radius: 10px;
   background-color: #ffffff;
   box-shadow: 1px 1px 0px 0px #073b4cd6;
@@ -359,7 +353,6 @@ nav,
   display: flex;
   flex-direction: column;
   position: relative;
-  user-select: none;
   cursor: pointer;
   user-select: none;
 }
@@ -790,6 +783,53 @@ textarea {
   }
 }
 
+@media (max-width: 480px) {
+  .container-right {
+    padding: 0 4px 4px;
+    gap: 0.4rem;
+  }
+
+  .todo {
+    width: 150px;
+    min-width: 47%;
+    padding: 0 1rem 0.2rem;
+  }
+
+  .todo .priority-circle {
+    width: 11px;
+    height: 11px;
+  }
+
+  .todo > .title-text {
+    font-size: .8rem;
+  }
+
+  .title {
+    margin-bottom: .1rem;
+    margin-top: .9rem;
+  }
+
+  .todo-reminder-img {
+    width: 0.7rem;
+  }
+
+  .todo-reminder-content {
+    font-size: .5rem;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 672px) {
+  .container-right {
+    padding: 0 10px 4px;
+  }
+
+  .todo {
+    width: 150px;
+    min-width: 47%;
+    padding: 0 1rem 0.4rem;
+  }
+}
+
 @media (max-width: 640px) {
   .toggle-project.visible,
   .toggle-project.visible.edit-projects-container,  
@@ -802,17 +842,6 @@ textarea {
   }
 }
 
- /* Reduce padding for smaller dev  */
- /* Min 2 rows */
- /* Adjust todo width for various sizes + padding cont right */
- /* smaller todo until which size
-
- .container-right {
- 
-  gap: 1rem;
-  padding: 0 0 4px;
-} */
-
 @media (max-width: 770px) {
   .add-toDo-btn {
     padding: 1rem;
@@ -822,7 +851,6 @@ textarea {
     
   }
 }
-
 
 @media (max-width: 1024px) {
   .project-list-container {
